# dbgraph

./: .gitignore  README.md  install.ps1  install.sh
.github/workflows/: postgres-integration.yml  release.yml
crates/dbgraph-cli/: Cargo.toml
crates/dbgraph-cli/src/: main.rs
crates/dbgraph-core/src/: benchmark.rs  config.rs  diff.rs  lib.rs  profiling.rs  sampling.rs  security.rs  sync.rs
crates/dbgraph-graph/: Cargo.toml
crates/dbgraph-graph/src/: analysis.rs  context.rs  impact.rs  lib.rs  relations.rs  search.rs  workload.rs
crates/dbgraph-installer/src/: lib.rs
crates/dbgraph-mcp/: Cargo.toml
crates/dbgraph-mcp/src/: lib.rs
crates/dbgraph-provider/: Cargo.toml
crates/dbgraph-provider/src/: lib.rs  sqlite.rs  unsupported.rs
crates/dbgraph-provider/src/postgres/: mod.rs
crates/dbgraph-sql/src/: lib.rs
docs/: integration-tests.md  performance.md  provider-capabilities.md  quickstart.md  release-matrix.md  security.md  usage.md  usage.zh-CN.md
examples/postgres-teashop/: README.md  docker-compose.yml  mcp-config.example.json  schema.sql
examples/postgres-teashop/sql/: orders.sql
npm/: package.json
scripts/integration/: postgres-smoke.ps1
site/: index.html  styles.css
site/docs/: configuration.html  providers.html  quickstart.html  release-matrix.html  security.html  usage.html
