[package]
name = "dbgraph-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbgraph-core = { path = "../dbgraph-core" }
dbgraph-storage = { path = "../dbgraph-storage" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
