[package]
name = "dbgraph-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
dbgraph-core = { path = "../dbgraph-core" }
dbgraph-graph = { path = "../dbgraph-graph" }
dbgraph-sql = { path = "../dbgraph-sql" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
dbgraph-storage = { path = "../dbgraph-storage" }

[lints]
workspace = true
